@@ -1,1 +1,2 @@
 void gather_def_item (ELEMENT *current /* , enum command_id next_command */ );
+DEF_ARGS_EXTRA *parse_def (enum command_id command, ELEMENT_LIST contents);
